--- a/hostel.html
+++ b/hostel.html
@@ -63,7 +63,7 @@
               </a>
             </li>
             <li class="menu-item">
-              <a href="./hostel.html" class="menu-link">
+              <a href="#" class="menu-link">
                 <i class="fas fa-chart-pie menu-icon tf-icons"></i>
                 <div>Mehmonxonalar</div>
               </a>
@@ -112,7 +112,63 @@
           <!-- Content wrapper -->
           <div class="content-wrapper">
             <div class="container-xxl flex-grow-1 container-p-y">
-              <div><h4 class="py-3 mb-4">Панель управления</h4><div class="card"><div class="header text-center p-3"><h4 class="title">Добро пожаловать, администратор</h4></div><div class="content"></div></div></div>
+                <div>
+                    <div class="d-flex mb-4 align-items-center justify-content-between">
+                        <h4 class="py-3 mb-0">
+                            <span class="text-muted fw-light">
+                                <a href="/">Asosiy</a> /
+                            </span> Mehmonxonalar
+                        </h4>
+                        <a class="btn btn-success" href="/branches/create">Mehmonxona qo'shish</a>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table class="table table-striped table-hover">
+                                    <thead>
+                                        <tr>
+                                            <th>#</th>
+                                            <th>Nomi</th>
+                                            <th>Manzili</th>
+                                            <th>Tasnifi</th>
+                                            <th>&nbsp;</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>1</td>
+                                            <td><a href="#">Al Riffa Hotel</a></td>
+                                            <td>Ibrahim Al Khalil Road, Al Misfalah District, Makkah, Saudi Arabia</td>
+                                            <td>Al Riffa mehmonxonasi turli xil xona variantlari, jumladan umumiy yotoqxonalar va shaxsiy xonalar bilan arzon turar joyni taklif etadi. U Masjid al-Haromga yaqin joyda joylashgani uchun ziyoratchilar uchun ideal tanlovdir. Mehmonxona bepul Wi-Fi, 24 soat xizmat ko'rsatadigan resepsiyon va mahalliy taomlarni taklif qiluvchi restoran bilan ta'minlaydi. Xodimlar mehmondo'stligi va yordami bilan mashhur.</td>
+                                            <td>
+                                                <a class="btn p-1" href="#">
+                                                    <i class="fas fa-pen"></i>
+                                                </a>
+                                                <button class="btn p-1">
+                                                    <i class="fas fa-trash"></i>
+                                                </button>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>2</td>
+                                            <td><a href="#">Nawazi Al Fateh Hotel</a></td>
+                                            <td>King Abdulaziz Road, Al Misfalah District, Makkah, Saudi Arabia</td>
+                                            <td>Nawazi Al Fateh mehmonxonasi gavjum Al Misfalah tumanida, muqaddas Masjid al-Haromdan qisqa masofada joylashgan. Mehmonxonada asosiy qulayliklarga ega byudjetli xonalar mavjud. U bepul Wi-Fi, 24 soatlik resepsiyon va mehmonlar dam olishi mumkin bo'lgan umumiy dam olish maydonini taklif etadi. Mehmonxonaning qulay joylashuvi va samimiy xodimlari uni sayohatchilar uchun mashhur tanlovga aylantiradi.</td>
+                                            <td>
+                                                <a class="btn p-1" href="#">
+                                                    <i class="fas fa-pen"></i>
+                                                </a>
+                                                <button class="btn p-1">
+                                                    <i class="fas fa-trash"></i>
+                                                </button>
+                                            </td>
+                                        </tr>
+                                     </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>            
             </div>
             <div class="content-backdrop fade"></div>
           </div>
