airplaen and hostel create pages

--- a/hostel.html
+++ b/hostel.html
@@ -187,7 +187,7 @@
                       </span>
                       Mehmonxonalar
                     </h4>
-                    <a class="btn btn-success" href="/branches/create"
+                    <a class="btn btn-success" href="./hostel-create.html"
                       >Mehmonxona qo'shish</a
                     >
                   </div>
