--- a/airplane.html
+++ b/airplane.html
@@ -66,7 +66,7 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a href="./airplane.html" class="menu-link">
+                <a href="#" class="menu-link">
                   <i class="fa-solid fa-plane menu-icon tf-icons"></i>
                   <div>Havo yo'llari</div>
                 </a>
@@ -179,12 +179,181 @@
             <div class="content-wrapper">
               <div class="container-xxl flex-grow-1 container-p-y">
                 <div>
-                  <h4 class="py-3 mb-4">Панель управления</h4>
+                  <div
+                    class="d-flex mb-4 align-items-center justify-content-between">
+                    <h4 class="py-3 mb-0">
+                      <span class="text-muted fw-light"
+                        ><a href="./index.html">Asosiy</a> /</span
+                      >
+                      Havo yo'llari
+                    </h4>
+                  </div>
                   <div class="card">
-                    <div class="header text-center p-3">
-                      <h4 class="title">Добро пожаловать, администратор</h4>
+                    <div class="card-body">
+                      <div
+                        class="d-flex flex-column-reverse flex-md-row align-items-center justify-content-between mb-3">
+                        <div class="d-flex align-items-center">
+                          <label
+                            class="form-label text-nowrap mb-0 me-2"
+                            for="page-size-label"
+                            >Размер стр:</label
+                          ><select id="page-size-label" class="form-select">
+                            <option value="10">10</option>
+                            <option value="15">15</option>
+                            <option value="20">20</option>
+                            <option value="25">25</option>
+                            <option value="40">40</option>
+                            <option value="50">50</option>
+                            <option value="60">60</option>
+                            <option value="70">70</option>
+                            <option value="80">80</option>
+                            <option value="90">90</option>
+                            <option value="100">100</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="table-responsive mb-4">
+                        <table class="table table-striped table-hover">
+                          <thead>
+                            <tr>
+                              <th>#</th>
+                              <th>Название</th>
+                              <th>Nomi</th>
+                              <th>Name</th>
+                              <th></th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr>
+                              <td></td>
+                              <td>
+                                <input
+                                  type="text"
+                                  class="form-control"
+                                  value="" />
+                              </td>
+                              <td></td>
+                              <td></td>
+                              <td></td>
+                            </tr>
+                            <tr>
+                              <td>1</td>
+                              <td>Boeing 737</td>
+                              <td>Boeing 737</td>
+                              <td>Boeing 737</td>
+                              <td>
+                                <button class="btn btn-icon btn-success">
+                                    <i class="fas fa-pen"></i>
+                                </button
+                                ><button class="btn btn-icon btn-danger">
+                                    <i class="fas fa-trash"></i>
+                                </button>
+                              </td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>Airbus A320</td>
+                                <td>Airbus A320</td>
+                                <td>Airbus A320</td>
+                                <td>
+                                  <button class="btn btn-icon btn-success">
+                                      <i class="fas fa-pen"></i>
+                                  </button
+                                  ><button class="btn btn-icon btn-danger">
+                                      <i class="fas fa-trash"></i>
+                                  </button>
+                                </td>
+                              </tr>
+                            <tr>
+                              <td></td>
+                              <td>
+                                <input
+                                  class="form-control"
+                                  type="text"
+                                  value="" />
+                              </td>
+                              <td>
+                                <input
+                                  class="form-control"
+                                  type="text"
+                                  value="" />
+                              </td>
+                              <td>
+                                <input
+                                  class="form-control"
+                                  type="text"
+                                  value="" />
+                              </td>
+                              <td>
+                                <button
+                                  type="submit"
+                                  class="btn btn-icon btn-success">
+                                  <i class="fa-solid fa-plus"></i>
+                                </button>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                      <div
+                        class="d-flex flex-column flex-md-row justify-content-between align-items-center">
+                        <span class="mb-2 mb-md-0"
+                          >Показаны записи 10 из 12</span
+                        >
+                        <ul
+                          class="pagination m-0 align-items-center"
+                          role="navigation"
+                          aria-label="Pagination">
+                          <li class="prev">
+                            <a
+                              class=""
+                              tabindex="0"
+                              role="button"
+                              aria-disabled="false"
+                              aria-label="Previous page"
+                              rel="prev"
+                              ><button class="page-link">
+                                <i class="fa-solid fa-angle-left"></i>
+                              </button
+                            ></a>
+                          </li>
+                          <li class="page-item active">
+                            <a
+                              rel="prev"
+                              role="button"
+                              class="page-link"
+                              tabindex="0"
+                              aria-label="Page 1"
+                              >1</a
+                            >
+                          </li>
+                          <li class="page-item">
+                            <a
+                              rel="canonical"
+                              role="button"
+                              class="page-link"
+                              tabindex="-1"
+                              aria-label="Page 2 is your current page"
+                              aria-current="page"
+                              >2</a
+                            >
+                          </li>
+                          <li class="next disabled">
+                            <a
+                              class=" "
+                              tabindex="-1"
+                              role="button"
+                              aria-disabled="true"
+                              aria-label="Next page"
+                              rel="next"
+                              ><button class="page-link">
+                                <i class="fa-solid fa-angle-right"></i>
+                              </button
+                            ></a>
+                          </li>
+                        </ul>
+                      </div>
                     </div>
-                    <div class="content"></div>
                   </div>
                 </div>
               </div>
