--- a/tour-view.html
+++ b/tour-view.html
@@ -59,7 +59,7 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a href="./tour.html" class="menu-link">
+                <a href="#" class="menu-link">
                   <i class="fa-solid fa-ticket menu-icon tf-icons"></i>
                   <div>Tur paket</div>
                 </a>
@@ -71,7 +71,7 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a href="./airplane.html" class="menu-link">
+                <a href="#" class="menu-link">
                   <i class="fa-solid fa-plane menu-icon tf-icons"></i>
                   <div>Havo yo'llari</div>
                 </a>
@@ -193,12 +193,156 @@
             <div class="content-wrapper">
               <div class="container-xxl flex-grow-1 container-p-y">
                 <div>
-                  <h4 class="py-3 mb-4">Панель управления</h4>
-                  <div class="card">
-                    <div class="header text-center p-3">
-                      <h4 class="title">Добро пожаловать, администратор</h4>
+                  <div
+                    class="d-flex mb-4 align-items-center justify-content-between"
+                  >
+                    <h4 class="py-3 mb-0">
+                      <span class="text-muted fw-light"
+                        ><a href="/">Asosiy</a> /</span
+                      >
+                      <span class="text-muted fw-light"
+                        ><a href="./hostel.html">Mehmonxonalar</a> /</span
+                      >
+                      Al Riffa Hotel
+                    </h4>
+                    <a class="btn btn-info" href="./hostel.html">Orqaga</a>
+                  </div>
+                  <div class="card mb-3">
+                    <div class="card-body">
+                      <div class="row g-4">
+                        <div class="col-md-6">
+                          <table
+                            class="table table-striped table-bordered detail-view"
+                          >
+                            <tbody>
+                              <tr>
+                                <th>Identifikatsiya raqami</th>
+                                <td>1</td>
+                              </tr>
+                              <tr>
+                                <th>Nomi</th>
+                                <td>Tur nomi uz</td>
+                              </tr>
+                              <tr>
+                                <th>Uchish joyi</th>
+                                <td>Toshkent</td>
+                              </tr>
+                              <tr>
+                                <th>Standart</th>
+                                <td>13 750 000</td>
+                              </tr>
+                              <tr>
+                                <th>Biznes</th>
+                                <td>14 950 000</td>
+                              </tr>
+                              <tr>
+                                <th>Comfort</th>
+                                <td>16 750 000</td>
+                              </tr>
+                              <tr>
+                                <th>Kechalar soni</th>
+                                <td>14</td>
+                              </tr>
+                              <tr>
+                                <th>Biletlar soni</th>
+                                <td>14 / 45</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div>
+                        <div class="col-md-6">
+                          <table
+                            class="table table-striped table-bordered detail-view"
+                          >
+                            <tbody>
+                              <tr>
+                                <th>Mehmonxona</th>
+                                <td>Hilton</td>
+                              </tr>
+                              <tr>
+                                <th>Havo yo'llari</th>
+                                <td>O'zbekiston havo yo'llari</td>
+                              </tr>
+                              <tr>
+                                <th>Tur tasnifi</th>
+                                <td>Tur haqida qo'shimcha ma'lumot</td>
+                              </tr>
+                              <tr>
+                                <th>Kim Yaratgan</th>
+                                <td>Jaxongirov Elyor</td>
+                              </tr>
+                              <tr>
+                                <th>Yaratilgan vaqt</th>
+                                <td>18.05.2024</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div>
+                      </div>
                     </div>
-                    <div class="content"></div>
+                  </div>
+                  <div class="card mb-3">
+                    <div class="card-body">
+                      <div class="row">
+                        <div class="col-md-2 col-6">
+                          <div class="d-flex flex-column">
+                            <div>
+                              <label for="adult-ticket" class="form-label"
+                                >Kattalar</label
+                              >
+                              <select class="form-select" name="" id="">
+                                <option value="0">0</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                              </select>
+                            </div>
+                            <div>
+                              <label for="child-ticket" class="form-label"
+                                >Bolalar</label
+                              >
+                              <select class="form-select" name="" id="">
+                                <option value="0">0</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                              </select>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-md-2 col-6">
+                          <div class="mb-4">
+                            <label for="tour-status" class="form-label"
+                              >Tarif</label
+                            >
+                            <select
+                              class="form-select"
+                              name=""
+                              id="tour-status"
+                            >
+                              <option value="0">Standart</option>
+                              <option value="1">Comfort</option>
+                              <option value="2">Biznes</option>
+                            </select>
+                          </div>
+                          <div>
+                            <div class="form-check">
+                              <input
+                                class="form-check-input"
+                                type="checkbox"
+                                value=""
+                                id="child-bad"
+                                checked=""
+                              />
+                              <label for="child-bad" class="form-check-label"
+                                >Bolaga alohida yotoq</label
+                              >
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
