--- a/orders.html
+++ b/orders.html
@@ -59,7 +59,7 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./tour.html" class="menu-link">
                   <i class="fa-solid fa-ticket menu-icon tf-icons"></i>
                   <div>Tur paket</div>
                 </a>
@@ -71,7 +71,7 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="./airplane.html" class="menu-link">
                   <i class="fa-solid fa-plane menu-icon tf-icons"></i>
                   <div>Havo yo'llari</div>
                 </a>
@@ -199,11 +199,8 @@
                     <span class="text-muted fw-light">
                       <a href="/">Asosiy</a> /
                     </span>
-                    Mehmonxonalar
+                    Buyurtmalar
                   </h4>
-                  <a class="btn btn-success" href="./hostel-create.html"
-                    >Mehmonxona qo'shish</a
-                  >
                 </div>
                 <div class="card">
                   <div class="card-body">
@@ -235,12 +232,16 @@
                         <thead>
                           <tr>
                             <th>#</th>
-                            <th>Nomi</th>
-                            <th>Manzili</th>
-                            <th>Tasnifi</th>
+                            <th>Soni</th>
+                            <th>Asosiy Buyurtmachi</th>
+                            <th>Telefon Raqam</th>
+                            <th>Jinsi</th>
+                            <th>To'lov holati</th>
+                            <th>TO'lovgacha muddat</th>
                             <th>&nbsp;</th>
                           </tr>
                           <tr>
+                            <td></td>
                             <td></td>
                             <td>
                               <input
@@ -254,24 +255,14 @@
                         <tbody>
                           <tr>
                             <td>1</td>
+                            <td>3 kishi</td>
                             <td>
-                              <a href="./hostel-view.html">Al Riffa Hotel</a>
+                              <a href="./order-view.html">Esonov Omon</a>
                             </td>
-                            <td>
-                              Ibrahim Al Khalil Road, Al Misfalah District,
-                              Makkah, Saudi Arabia
-                            </td>
-                            <td>
-                              Al Riffa mehmonxonasi turli xil xona variantlari,
-                              jumladan umumiy yotoqxonalar va shaxsiy xonalar
-                              bilan arzon turar joyni taklif etadi. U Masjid
-                              al-Haromga yaqin joyda joylashgani uchun
-                              ziyoratchilar uchun ideal tanlovdir. Mehmonxona
-                              bepul Wi-Fi, 24 soat xizmat ko'rsatadigan
-                              resepsiyon va mahalliy taomlarni taklif qiluvchi
-                              restoran bilan ta'minlaydi. Xodimlar
-                              mehmondo'stligi va yordami bilan mashhur.
-                            </td>
+                            <td>+998 99 613 22 33</td>
+                            <td>Erkak</td>
+                            <td>Kutilmoqda</td>
+                            <td>23 soat</td>
                             <td>
                               <a class="btn p-1" href="./hostel-view.html">
                                 <i class="fas fa-pen"></i>
@@ -282,29 +273,17 @@
                             </td>
                           </tr>
                           <tr>
-                            <td>2</td>
+                            <td>1</td>
+                            <td>1 kishi</td>
                             <td>
-                              <a href="./hostel-view.html"
-                                >Nawazi Al Fateh Hotel</a
-                              >
+                              <a href="./order-view.html">Asadov Humoyun</a>
                             </td>
+                            <td>+998 99 010 31 00</td>
+                            <td>Erkak</td>
+                            <td>To'langan</td>
+                            <td></td>
                             <td>
-                              King Abdulaziz Road, Al Misfalah District, Makkah,
-                              Saudi Arabia
-                            </td>
-                            <td>
-                              Nawazi Al Fateh mehmonxonasi gavjum Al Misfalah
-                              tumanida, muqaddas Masjid al-Haromdan qisqa
-                              masofada joylashgan. Mehmonxonada asosiy
-                              qulayliklarga ega byudjetli xonalar mavjud. U
-                              bepul Wi-Fi, 24 soatlik resepsiyon va mehmonlar
-                              dam olishi mumkin bo'lgan umumiy dam olish
-                              maydonini taklif etadi. Mehmonxonaning qulay
-                              joylashuvi va samimiy xodimlari uni sayohatchilar
-                              uchun mashhur tanlovga aylantiradi.
-                            </td>
-                            <td>
-                              <a class="btn p-1" href="#">
+                              <a class="btn p-1" href="./hostel-view.html">
                                 <i class="fas fa-pen"></i>
                               </a>
                               <button class="btn p-1">
