--- a/order-view.html
+++ b/order-view.html
@@ -192,184 +192,74 @@
             <!-- Content wrapper -->
             <div class="content-wrapper">
               <div class="container-xxl flex-grow-1 container-p-y">
-                <div
-                  class="d-flex mb-4 align-items-center justify-content-between"
-                >
-                  <h4 class="py-3 mb-0">
-                    <span class="text-muted fw-light">
-                      <a href="/">Asosiy</a> /
-                    </span>
-                    Mehmonxonalar
-                  </h4>
-                  <a class="btn btn-success" href="./hostel-create.html"
-                    >Mehmonxona qo'shish</a
+                <div>
+                  <div
+                    class="d-flex mb-4 align-items-center justify-content-between"
                   >
-                </div>
-                <div class="card">
-                  <div class="card-body">
-                    <div
-                      class="d-flex flex-column-reverse flex-md-row align-items-center justify-content-between mb-3"
-                    >
-                      <div class="d-flex align-items-center">
-                        <label
-                          class="form-label text-nowrap mb-0 me-2"
-                          for="page-size-label"
-                          >Размер стр:</label
-                        ><select id="page-size-label" class="form-select">
-                          <option value="10">10</option>
-                          <option value="15">15</option>
-                          <option value="20">20</option>
-                          <option value="25">25</option>
-                          <option value="40">40</option>
-                          <option value="50">50</option>
-                          <option value="60">60</option>
-                          <option value="70">70</option>
-                          <option value="80">80</option>
-                          <option value="90">90</option>
-                          <option value="100">100</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="table-responsive mb-4">
-                      <table class="table table-striped table-hover">
-                        <thead>
-                          <tr>
-                            <th>#</th>
-                            <th>Nomi</th>
-                            <th>Manzili</th>
-                            <th>Tasnifi</th>
-                            <th>&nbsp;</th>
-                          </tr>
-                          <tr>
-                            <td></td>
-                            <td>
-                              <input
-                                type="text"
-                                class="form-control"
-                                value=""
-                              />
-                            </td>
-                          </tr>
-                        </thead>
+                    <h4 class="py-3 mb-0">
+                      <span class="text-muted fw-light"
+                        ><a href="./index.html">Asosiy</a> /</span
+                      >
+                      <span class="text-muted fw-light"
+                        ><a href="./orders.html">Buyurtmalar</a> /</span
+                      >
+                      Esonov Omon
+                    </h4>
+                    <a class="btn btn-info" href="./orders.html">Orqaga</a>
+                  </div>
+                  <div class="card mb-3">
+                    <div class="card-body">
+                      <table
+                        class="table table-striped table-bordered detail-view"
+                      >
                         <tbody>
                           <tr>
+                            <th>Identifikatsiya raqami</th>
                             <td>1</td>
+                          </tr>
+                          <tr>
+                            <th>Ism va familiyasi</th>
+                            <td>Esonov Omon</td>
+                          </tr>
+                          <tr>
+                            <th>Telefon raqami</th>
+                            <td>+998 99 613 22 33</td>
+                          </tr>
+                          <tr>
+                            <th>Passport Seriyasi</th>
+                            <td>AA 012 12 34</td>
+                          </tr>
+                          <tr>
+                            <th>Yoshi</th>
+                            <td>45</td>
+                          </tr>
+                          <tr>
+                            <th>Jinsi</th>
+                            <td>Erkak</td>
+                          </tr>
+                          <tr>
+                            <th>Operator</th>
                             <td>
-                              <a href="./hostel-view.html">Al Riffa Hotel</a>
-                            </td>
-                            <td>
-                              Ibrahim Al Khalil Road, Al Misfalah District,
-                              Makkah, Saudi Arabia
-                            </td>
-                            <td>
-                              Al Riffa mehmonxonasi turli xil xona variantlari,
-                              jumladan umumiy yotoqxonalar va shaxsiy xonalar
-                              bilan arzon turar joyni taklif etadi. U Masjid
-                              al-Haromga yaqin joyda joylashgani uchun
-                              ziyoratchilar uchun ideal tanlovdir. Mehmonxona
-                              bepul Wi-Fi, 24 soat xizmat ko'rsatadigan
-                              resepsiyon va mahalliy taomlarni taklif qiluvchi
-                              restoran bilan ta'minlaydi. Xodimlar
-                              mehmondo'stligi va yordami bilan mashhur.
-                            </td>
-                            <td>
-                              <a class="btn p-1" href="./hostel-view.html">
-                                <i class="fas fa-pen"></i>
-                              </a>
-                              <button class="btn p-1">
-                                <i class="fas fa-trash"></i>
-                              </button>
+                              <a href="#">Iqboljonov Ozod</a>
                             </td>
                           </tr>
                           <tr>
-                            <td>2</td>
+                            <th>Yaratilgan vaqti</th>
+                            <td>02.05.2024</td>
+                          </tr>
+                          <tr>
+                            <th>To'lov holati</th>
+                            <td>To'langan</td>
+                          </tr>
+                          <tr>
+                            <th>Qo'shimcha ma'lumotlar</th>
                             <td>
-                              <a href="./hostel-view.html"
-                                >Nawazi Al Fateh Hotel</a
-                              >
-                            </td>
-                            <td>
-                              King Abdulaziz Road, Al Misfalah District, Makkah,
-                              Saudi Arabia
-                            </td>
-                            <td>
-                              Nawazi Al Fateh mehmonxonasi gavjum Al Misfalah
-                              tumanida, muqaddas Masjid al-Haromdan qisqa
-                              masofada joylashgan. Mehmonxonada asosiy
-                              qulayliklarga ega byudjetli xonalar mavjud. U
-                              bepul Wi-Fi, 24 soatlik resepsiyon va mehmonlar
-                              dam olishi mumkin bo'lgan umumiy dam olish
-                              maydonini taklif etadi. Mehmonxonaning qulay
-                              joylashuvi va samimiy xodimlari uni sayohatchilar
-                              uchun mashhur tanlovga aylantiradi.
-                            </td>
-                            <td>
-                              <a class="btn p-1" href="#">
-                                <i class="fas fa-pen"></i>
-                              </a>
-                              <button class="btn p-1">
-                                <i class="fas fa-trash"></i>
-                              </button>
+                              Lorem ipsum dolor sit, amet consectetur recusandae
+                              adipisci dicta magni officia.
                             </td>
                           </tr>
                         </tbody>
                       </table>
-                    </div>
-                    <div
-                      class="d-flex flex-column flex-md-row justify-content-between align-items-center"
-                    >
-                      <span class="mb-2 mb-md-0">Показаны записи 10 из 12</span>
-                      <ul
-                        class="pagination m-0 align-items-center"
-                        role="navigation"
-                        aria-label="Pagination"
-                      >
-                        <li class="prev">
-                          <a
-                            class=""
-                            tabindex="0"
-                            role="button"
-                            aria-disabled="false"
-                            aria-label="Previous page"
-                            rel="prev"
-                            ><button class="page-link">
-                              <i class="fa-solid fa-angle-left"></i></button
-                          ></a>
-                        </li>
-                        <li class="page-item active">
-                          <a
-                            rel="prev"
-                            role="button"
-                            class="page-link"
-                            tabindex="0"
-                            aria-label="Page 1"
-                            >1</a
-                          >
-                        </li>
-                        <li class="page-item">
-                          <a
-                            rel="canonical"
-                            role="button"
-                            class="page-link"
-                            tabindex="-1"
-                            aria-label="Page 2 is your current page"
-                            aria-current="page"
-                            >2</a
-                          >
-                        </li>
-                        <li class="next disabled">
-                          <a
-                            class=" "
-                            tabindex="-1"
-                            role="button"
-                            aria-disabled="true"
-                            aria-label="Next page"
-                            rel="next"
-                            ><button class="page-link">
-                              <i class="fa-solid fa-angle-right"></i></button
-                          ></a>
-                        </li>
-                      </ul>
                     </div>
                   </div>
                 </div>
