--- a/adminstrator-view.html
+++ b/adminstrator-view.html
@@ -103,7 +103,7 @@
               </li>
               <li class="menu-item">
                 <a href="#" class="menu-link">
-                  <i class="fa-solid fa-code-branch menu-icon tf-icons"></i>
+                  <i class="fa-solid fa-code-adminstrator.html menu-icon tf-icons"></i>
                   <div>Filyallar</div>
                 </a>
               </li>
@@ -186,11 +186,11 @@
                         ><a href="/">Asosiy</a> /</span
                       >
                       <span class="text-muted fw-light"
-                        ><a href="./branch.html">Filyallar</a> /</span
+                        ><a href="./adminstrator.html">Adminstratorlar</a> /</span
                       >
-                      Markaziy filyal
+                      Toxirjonova Dildora Sardorovna
                     </h4>
-                    <a class="btn btn-info" href="./branch.html">Orqaga</a>
+                    <a class="btn btn-info" href="./adminstrator.html">Orqaga</a>
                   </div>
                   <div class="card mb-3">
                     <div class="card-body">
@@ -205,22 +205,26 @@
                               </tr>
                               <tr>
                               <tr>
-                                <th>Nomi</th>
-                                <td>Markaziy filyal</td>
+                                <th>FISH</th>
+                                <td>Toxirjonova Dildora Sardorovna</td>
                               </tr>
                               <tr>
-                                <th>Shahar</th>
-                                <td>Toshkent</td>
+                                <th>Telefon raqam</th>
+                                <td>+998 99 617 45 65</td>
                               </tr>
                               <tr>
-                                <th>Manzil</th>
+                                <th>Elektron manzil</th>
                                 <td>
-                                  Toshkent shahar, Yakkasaroy tumani 19
+                                  toxirjonova45@gmail.com
                                 </td>
                               </tr>
                               <tr>
                                 <th>Buyurtmalar soni</th>
-                                <td>115</td>
+                                <td>67</td>
+                              </tr>
+                              <tr>
+                                <th>Holati</th>
+                                <td>Faol</td>
                               </tr>
                             </tbody>
                           </table>
@@ -230,13 +234,6 @@
                             class="table table-striped table-bordered detail-view">
                             <tbody>
                               <tr>
-                                <th>Direktor</th>
-                                <td>Maxmudov Bexruz</td>
-                              </tr>
-                              <tr>
-                                <th>Xodimlar soni</th>
-                                <td>21</td>
-                              </tr>
                               <tr>
                                 <th>Yaratuvchi</th>
                                 <td>Muxtorova Malika</td>
