--- a/room.html
+++ b/room.html
@@ -227,15 +227,15 @@
                           <tbody>
                             <tr>
                               <td></td>
+                              <td></td>
+                              <td></td>
+                              <td></td>
                               <td>
                                 <input
-                                  type="text"
+                                  type="number"
                                   class="form-control"
                                   value="" />
                               </td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
                               <td></td>
                             </tr>
                             <tr>
@@ -295,6 +295,40 @@
                                 </button
                                 ><button class="btn btn-icon btn-danger">
                                     <i class="fas fa-trash"></i>
+                                </button>
+                              </td>
+                            </tr>
+                            <tr>
+                              <td></td>
+                              <td>
+                                <input
+                                  class="form-control"
+                                  type="text"
+                                  value="" />
+                              </td>
+                              <td>
+                                <input
+                                  class="form-control"
+                                  type="text"
+                                  value="" />
+                              </td>
+                              <td>
+                                <input
+                                  class="form-control"
+                                  type="text"
+                                  value="" />
+                              </td>
+                              <td>
+                                <input
+                                  class="form-control"
+                                  type="number"
+                                  value="" />
+                              </td>
+                              <td>
+                                <button
+                                  type="submit"
+                                  class="btn btn-icon btn-success">
+                                  <i class="fa-solid fa-plus"></i>
                                 </button>
                               </td>
                             </tr>
